2005-03-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/fp.c: use callbacks to handle
	"size-allocate" for preview size changes, fixes 
	bug #160032.
	
2005-03-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpimage-convert.c:  when converting grayscale
	to mono, treat the palette as gray rather than rgb, giving
	more than tenfold speedup.  Fixes bug #170801.

2005-03-18  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.c: make "preview-size" and
	"preview-border-width" construct properties. Fixes creation
	using g_object_new().

	* app/widgets/gimpcontainerentry.c
	* app/widgets/gimpcontainertreeview.c
	* app/widgets/gimplayertreeview.c (set_preview_size): handle
	unset model and/or view gracefully.

	* app/dialogs/image-new-dialog.c: unset "focus-on-click" on the
	template combo-box.

2005-03-17  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/fp.c:  major code cleanup, make it
	Repeat and Re-Show properly.  Should fix bug #141032.

2005-03-17  Sven Neumann  <sven@gimp.org>

	* app/actions/layers-actions.c
	* app/actions/plug-in-actions.c
	* app/actions/view-actions.c
	* plug-ins/common/compose.c
	* plug-ins/common/dog.c
	* plug-ins/pygimp/plug-ins/py-slice.py
	* plug-ins/script-fu/scripts/i26-gunya2.scm
	* plug-ins/script-fu/scripts/news-text.scm
	* plug-ins/script-fu/scripts/text-circle.scm: applied patch from
	Michael Terry that adds missing mnemonics (bug #106991).

2005-03-16  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.c: fixed checks for uncalculated histogram.
	Fixes bug #170570.

2005-03-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectangletool.[ch]: improve cursor handling and
	other aspects of ui for rectangle tools.

2005-03-14  Shlomi Fish  <shlomif@iglu.org.il>

	* app/paint-funcs/paint-funcs.c
	* app/paint-funcs/paint-funcs-generic.h: fix bug #143315. When the